--- a/src/app/modules/samples/samples-report/samples-report.component.html
+++ b/src/app/modules/samples/samples-report/samples-report.component.html
@@ -1,19 +1,31 @@
-<section
-    class="filters"
-    [formGroup]="filtersForm"
->
-  <div class="field">
-    <mat-form-field class="mat-form-field-full-width">
-      <input
-          formControlName="year"
-          matInput
-          placeholder="Отчетный год:"
-          type="text"
-      />
-    </mat-form-field>
+<section class="filters">
+  <div
+      class="fields"
+      [formGroup]="filtersForm"
+  >
+    <div class="field">
+      <mat-form-field class="mat-form-field-full-width">
+        <input
+            formControlName="sampleCode"
+            matInput
+            placeholder="Код пробы:"
+            type="text"
+        />
+      </mat-form-field>
+    </div>
+    <div class="field">
+      <mat-form-field class="mat-form-field-full-width">
+        <input
+            formControlName="year"
+            matInput
+            placeholder="Отчетный год:"
+            type="text"
+        />
+      </mat-form-field>
+    </div>
   </div>
 
-  <div class="field">
+  <div class="buttons">
     <button
         mat-raised-button
         [disabled]="filtersForm.invalid"
