--- a/src/app/modules/samples/samples-report/samples-report.component.scss
+++ b/src/app/modules/samples/samples-report/samples-report.component.scss
@@ -1,6 +1,6 @@
 @import '../../../ui/common/styles/colors';
 
-$filters-height: 80px;
+$filters-height: 130px;
 
 :host {
   display: block;
@@ -10,17 +10,25 @@ $filters-height: 80px;
 
 .filters {
   $border-bottom-width: 1px;
-  $vertical-padding: 10px;
 
   display: flex;
-  height: $filters-height - $border-bottom-width - $vertical-padding * 2;
-  padding: $vertical-padding 0;
+  flex-direction: column;
+  height: $filters-height - $border-bottom-width;
   border-bottom: $border-bottom-width solid $border-color;
 
-  .field {
+  .fields {
     display: flex;
-    max-width: 300px;
-    height: 100%;
+    height: 70px;
+    padding-top: 10px;
+
+    .field {
+      width: 300px;
+      padding: 0 10px;
+    }
+  }
+
+  .buttons {
+    flex-grow: 1;
     padding: 0 10px;
     align-items: center;
   }
